# miscellaneous

./: .gitignore  ascii_table.php
GUTime-0.1.1/: GMemInfo  GMemInfo.c  GMemInfo.server  GUTime.c  GUTime.c.bak  GUTime.server  GUTime.spec  INSTALL  Makefile  Makefile.mem  README  mtest  server  test.c
apcupsdconf/: .apcpwdfile  CHANGELOG  KNOWNBUGS  Makefile  README  a.pl  admin_cfg.cgi  apcconf.cgi  apcupsd.conf  apcupsd.pm  apcupsd_common.pl  apcupsd_conf.cgi  apcupsd_login.cgi  apcupsd_pwd.cgi  configloc.pl
apcupsdconf/cfgfiles/: apcupsd-styles.css  apcupsd.conf  apcupsd.default.conf  apcupsd.master.conf  apcupsd.slave.conf  configure.html
apcupsdconf/examples/: Makefile  Makefile.in  config.cache  config.status  configure  configure.in
godura/: .project  Cargo.toml  Makefile  README  TODO  config.h.in
godura-0.6.4/: .cdtbuild  .cdtproject  INSTALL  KNOWNBUGS  Makefile  Makefile.in  config.h  config.status  configure  configure.in  godura.spec  install.sh
godura-0.6.4/autom4te.cache/: output.0  traces.0
godura-0.6.4/src/: Makefile  Makefile.in  godura.c  godura.h  godura_file.h  godura_prefs.c  godura_prefs.h  godura_search.h  godura_undo_redo.c
godura-0.6.4/src/gxmessagebox/: Makefile  gxmessagebox.c
godura-0.6.4/src/gxsearch/: Makefile
godura-0.6.4/src/gxsocket/: Makefile.in  gxsocket.h
godura-0.6.4/src/gxtext/: gxtext.c
godura/src/: Makefile  Makefile.in  godura  godura.rs  godura_edit.c  godura_edit.h  godura_file.c  godura_help.c  godura_help.h  godura_misc.c  godura_misc.h  godura_search.c  godura_undo_redo.h  utils.rs
godura/src/builders/: mainwindow.rs  menu.rs  mod.rs  scrollarea.rs  statusbar.rs
godura/src/gxmessagebox/: Makefile.in  gxmessagebox.h
godura/src/gxsearch/: Makefile  gxsearch.c  gxsearch.h
godura/src/gxsocket/: Makefile  gxsocket.c
godura/src/gxtext/: Makefile  gxtext.h
godura/src/menu/: file.rs
godura/src/utils/: edit.rs  files.rs  mod.rs  tools.rs  utilities.rs
jwmailapp/: .classpath  .project  POP3Result.txt  SMTPResult.txt  build.properties  build.xml  local.properties
jwmailapp/docs/: BUGS  README  redesign.odg
jwmailapp/web/: auth.jsp  inbox.jsp  index.jsp  logoff.jsp  readmail.jsp  refresh.jsp  sendmail.jsp
mpstat-0.1.2/: .gitignore  Makefile  cpucount.h  cpucount.sh  functions.c  mpstat  mpstat.c  mpstat.h
mpstat-0.1.2/libs/: functions.c  functions.h  interrupts.c  interrupts.h
mpstat-0.2.0/: functions.c  indent.sh  mpstat.c  mpstat.h
mpstat-0.2.0/libs/: functions.c  interrupts.c  interrupts.h
time-n-weather/: .gitignore  Cargo.toml  Makefile  README.md  clock.c  ow-weather-api.js  package-lock.json  package.json  weather-api.js  whichnode.sh
time-n-weather/node-libs/: asyncWrapper.js  format.js  get.js
time-n-weather/numbers/: numbers.c  numbers.h
time-n-weather/src/: clock.rs  utils.js
time-n-weather/src/utils/: mod.rs  network.rs  number.rs  numbers.rs  open-weather.rs  open_weather.rs  terminal.rs  utils.js  utils.rs  weather.rs  write_number.rs
(+39 files in other folders)
