dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/godura.c)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -libs:
AC_CHECK_LIB(ibs, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(time.h)
AC_CHECK_HEADERS(sys/stat.h)
AC_CHECK_HEADERS(sys/types.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(sys/socket.h)
AC_CHECK_HEADERS(netdb.h)

AC_CHECK_PROG(PKG_CONFIG, pkg-config, yes, no)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM
AC_CHECK_FUNCS(stat)

dnl Checks for library functions.

dnl This forces the default prefix to be /usr/local no matter the platfom
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_HEADER(config.h)

AC_OUTPUT(Makefile src/gxtext/Makefile src/Makefile src/gxsearch/Makefile src/gxmessagebox/Makefile src/gxsocket/Makefile)


