[package]
name = "godura"
version = "0.0.2"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A rust implementation of a text editor"
license = "GPL"

[dependencies]
glib = "0.22.7"
gtk4 = { version = "0.11.3", features = ["v4_12"] }

[[bin]]
name = "godura"
path = "src/godura.rs"
