[package]
name = "time-n-weather"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A rust clock and weather app"
license = "GPL"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }

[[bin]]
name = "time-n-weather"
path = "src/clock.rs"
