[package]
name = "time-n-weather"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A rust clock and weather app"
license = "GPL"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
crossterm = "0.29.0"
network-interface = "2.0"
gethostname = "1.1"

[[bin]]
name = "time-n-weather"
path = "src/clock.rs"
